# mcp-win-debugger

./: .gitignore  README.md  pyproject.toml
src/: __main__.py  cdb.py  mcp_server.py  server.py
src/windbg_mcp/: cdb.py  server.py
src/windbg_mcp/prompts/: crash-triage.prompt.md  live-debug.prompt.md  memory-corruption.prompt.md
tests/: conftest.py  test_cdb_process.py  test_crashme.py  test_mcp_tools.py
tests/fixtures/: CMakeLists.txt  crashme.c
