[project]
name = "windbg-mcp"
version = "0.1.0"
description = "MCP server for Windows debugging via cdb.exe"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
windbg-mcp = "windbg_mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
