[project]
name = "windbg-mcp"
version = "0.1.0"
description = "MCP server for Windows debugging via cdb.exe"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = "windbg_mcp"

[project.scripts]
windbg-mcp = "windbg_mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
